# Serplexity

./: .cursorrules  .dockerignore  .gitignore  CLAUDE.md  COST_CALCULATION_AUDIT_REPORT.md  CRITICAL_RELIABILITY_IMPROVEMENTS.md  GEMINI.md  README.md  Serplexity_GEO_Strategy.md  TECHNICAL_DEBT_ANALYSIS.md  UI-UX-Design-Theme.md  gitleaks.toml  package-lock.json  package.json  security.md  task.txt  tests.txt
backend/: .cursorrules  .env.example  .gitignore  DEPENDENCY_MANAGEMENT.md  TESTING.md  bullmq_cleanup.js  check-companies.js  check-competitors.js  check-duplicate-brands.js  check-nordstrom-mentions.js  check_current_job.js  check_job_details.js  check_queue_status.js  cleanup_failed_jobs.js  debug-competitors.js  debug-docker-entrypoint.sh  debug_environment.js  docker-start.sh  eslint.config.js  get-db-url.js  isolated-report-test.js  jest.config.js  jest.real-providers.config.js  lint_output.txt  mypy.ini  package-lock.json  package.json  prisma-aws.js  pyproject.toml  queue-test-report.js  quick-report-test.sh  requirements 2.txt  requirements.txt  run-prisma-studio.js  simple_queue_check.js  start.sh  test-agent-direct.js  test-answer-agent-mentions.js  test-answer-agent.js  test-answer.js  (+29 more)
backend/__mocks__/: bullmq.ts  ioredis.ts
backend/prisma/: schema.prisma
backend/scripts/: README.md  analyze-table-usage.ts  apply-database-optimizations.sh  check-all-constraints.ts  check-constraints.ts  database-optimization-report.ts  db-optimization-executive-summary.md  install-dependencies.sh  optimization-summary.md  regenerate-visibility-summaries.ts  (+5 more)
(+593 files in other folders)
